--- a/index.html
+++ b/index.html
@@ -13,40 +13,48 @@
 </head>
 
 <body>
-    Apply for access
+    <header>
+        <button> Apply for access</button>
 
-    Data tailored to your needs.
+        <h1> Data tailored to your needs.
+        </h1>
+        <button>Learn more</button>
+    </header>
+    <main>
+        <section>
+            <ol>
+                <li>
+                    <h2>Actionable insights</h2>
+                    <p>Optimize your products, improve customer satisfaction and stay ahead of the competition
+                        with our product data analytics.</p>
+                </li>
+                <li>
+                    <h2>Data-driven decisions</h2>
+                    <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help
+                        you unlock insights hidden in your product data..</p>
+                </li>
+                <li>
+                    <h2>
+                        Always affordable</h2>
+                    <p>Always affordable pricing that scales with your business. Get top-quality product data
+                        analytics services without hidden costs or unexpected fees.</p>
+                </li>
 
-    Learn more
+            </ol>
+        </section>
+        <section>
+            <h2>Be the first to test</h2>
+            <p>
+                Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a
+                beta tester for our app and kickstart your company. Apply for access below and I’ll be
+                in touch to schedule a call.</p>
 
-    1
+            <button>Apply for access</button>
+        </section>
 
-    Actionable insights
 
-    Optimize your products, improve customer satisfaction and stay ahead of the competition
-    with our product data analytics.
-
-    2
-
-    Data-driven decisions
-
-    Make data-driven decisions with our product data analytics. Our AI-generated reports help
-    you unlock insights hidden in your product data.
-
-    3
-
-    Always affordable
-
-    Always affordable pricing that scales with your business. Get top-quality product data
-    analytics services without hidden costs or unexpected fees.
-
-    Be the first to test
-
-    Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a
-    beta tester for our app and kickstart your company. Apply for access below and I’ll be
-    in touch to schedule a call.
-
-    Apply for access
+    </main>
+    <footer></footer>
 </body>
 
 </html>
