adds specific styling for mobile version including special styling of list element

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <header><!--workit =h1?-->
         <svg xmlns="http://www.w3.org/2000/svg" width="97" height="26" viewBox="0 0 97 26">
             <path fill="#FFF"
@@ -24,40 +25,46 @@
 
     <main>
         <section class="hero-shot">
-            <h1> Data <br>tailored</br> to your needs.
+            <h1> Data <b>tailored</b> to your needs.
             </h1>
-            <button class="btn-main">Learn more</button>
+            <button class="btn-green btn-main">Learn more</button>
             <img src="image-hero.webp" alt="mobile phone showing app sketch data curve">
         </section>
+
         <section>
-            <ol>
+            <ol class="feature-list">
                 <li>
                     <h2 class="heading-ol">Actionable insights</h2>
-                    <p>Optimize your products, improve customer satisfaction and stay ahead of the competition
+                    <p class="content-ol">Optimize your products, improve customer satisfaction and stay ahead of the
+                        competition
                         with our product data analytics.</p>
                 </li>
                 <li>
                     <h2 class="heading-ol">Data-driven decisions</h2>
-                    <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help
+                    <p class="content-ol">Make data-driven decisions with our product data analytics. Our AI-generated
+                        reports help
                         you unlock insights hidden in your product data..</p>
                 </li>
                 <li>
                     <h2 class="heading-ol">
                         Always affordable</h2>
-                    <p>Always affordable pricing that scales with your business. Get top-quality product data
+                    <p class="content-ol">Always affordable pricing that scales with your business. Get top-quality
+                        product data
                         analytics services without hidden costs or unexpected fees.</p>
                 </li>
-
             </ol>
-        </section>
-        <article>
+        </section class=img-cta-section>
+        <div class="img-founder">
+            <img src="image-founder.webp" alt="portrait of person with light green background">
+        </div>
+        <article class="cta-founder">
             <h2>Be the first to test</h2>
-            <p>
+            <p class="cta-content">
                 Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a
                 beta tester for our app and kickstart your company. Apply for access below and I’ll be
                 in touch to schedule a call.</p>
 
-            <button class="btn-main">Apply for access</button>
+            <button class="btn-green btn-main">Apply for access</button>
         </article>
 
 
